# tap

./: .gitignore  .prototools  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  skills-lock.json
.beads/: issues.jsonl  metadata.json
.cargo/: audit.toml
.docs/: BRAINSTORMING.md  ROADMAP.md
.docs/plans/: v0.1.0-implementation-plan.md  v0.2.0-implementation-plan.md
.docs/specs/: v0.1.0-tech-spec.md  v0.2.0-tech-spec.md
.github/scripts/: validate-action-pins.sh
.github/workflows/: ci.yml  pages.yml  release.yml  validate-action-pins.yml
.moon/: tasks.yml  toolchain.yml  workspace.yml
crates/tap-cli/: Cargo.toml  moon.yml
crates/tap-cli/src/: config.rs  main.rs
crates/tap-cli/src/commands/: capture.rs  dev.rs  init.rs  inspect.rs  mod.rs  test.rs
crates/tap-core/: Cargo.toml  moon.yml
crates/tap-core/assets/: quickjs.wasm
crates/tap-core/src/: config.rs  error.rs  event.rs  lib.rs  replication.rs  snapshot.rs  sse.rs  state.rs
crates/tap-core/src/adapters/: mod.rs
crates/tap-core/src/adapters/mysql/: mod.rs
crates/tap-core/src/error/: mod.rs  reconnect.rs
crates/tap-core/src/event/: builder.rs  envelope.rs  mod.rs
crates/tap-core/src/mysql/: connection.rs  events.rs  mod.rs  schema.rs  snapshot.rs  types.rs
crates/tap-core/src/postgres/: connection.rs  decoder.rs  mod.rs
crates/tap-core/src/replication/: mod.rs  protocol.rs  scram.rs  stream.rs  tls.rs
crates/tap-core/src/snapshot/: chunker.rs  mod.rs  parallel.rs  runner.rs
crates/tap-core/src/state/: migration.rs  mod.rs  store.rs
crates/tap-core/src/transforms/: config.rs  engine.rs  filter.rs  map.rs  mask.rs  mod.rs  validate.rs
crates/tap-core/tests/: integration.rs
crates/tap-proto/: Cargo.toml  build.rs  moon.yml
crates/tap-proto/proto/: tap.proto
crates/tap-proto/src/: lib.rs
crates/tap-sidecar/: Cargo.toml  moon.yml
crates/tap-sidecar/src/: main.rs  sse.rs  ws.rs
scripts/: e2e-test.sh  install.sh  release.sh
