[package]
name = "tap-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Change Data Capture engine — core types, Postgres replication, SQLite state, SSE server"

[dependencies]
tokio.workspace = true
tokio-postgres.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
