[package]
name = "tap-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Change Data Capture engine — core types, Postgres replication, SQLite state, SSE server"

[dependencies]
tokio.workspace = true
tokio-postgres.workspace = true
tokio-native-tls.workspace = true
futures.workspace = true
native-tls.workspace = true
postgres-native-tls.workspace = true
openssl.workspace = true
base64.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
thiserror.workspace = true
axum.workspace = true
http.workspace = true
tokio-stream = "0.1"
chrono = "0.4.44"

[dev-dependencies]
testcontainers = { version = "0.15", features = ["tokio"] }
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }
pretty_assertions = "1"


